# MyGPURaytracer

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/models/materials/: Intergalactic_Spaceship-(Wavefront).mtl  cube.mtl
apps/scenes/: cornellObj.txt  cornellSpaceship.txt
apps/src/: interactions.h  main.cpp  main.h  pathtrace.cu  pathtrace.h  preview.cpp  scene.cpp  scene.h  sceneStructs.h  timer.h
apps/stream_compaction/: common.cu  naive.cu
common/: oidn.aps
core/: export.linux.map  export.macos.map
include/OpenImageDenoise/: config.h
scenes/: cornellGlass.txt  cornellObj.txt  cornellSpaceship.txt
src/: interactions.h  intersections.h  main.cpp  pathtrace.cu  scene.cpp  scene.h  sceneStructs.h
stream_compaction/: common.h  cpu.cu  efficient.cu  thrust.cu
